crates/core/tests/compile_fail/context_add_fact_private.stderr
error[E0624]: method `add_fact` is private
 --> tests/compile_fail/context_add_fact_private.rs:7:21
  |
7 |     let _ = context.add_fact(fact);
  |                     ^^^^^^^^ private method
  |
 ::: src/context.rs
  |
  |     pub(crate) fn add_fact(&mut self, fact: ContextFact) -> Result<bool, ConvergeError> {
  |     ----------------------------------------------------------------------------------- private method defined here
